--- a/Mooc2/neighborhood.html
+++ b/Mooc2/neighborhood.html
@@ -1,51 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Neighborhood Walks</title>
+    <!-- You will need to link to the CSS file -->
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Neighborhood Walks</title>
-  <!-- You will need to link to the CSS file -->
-   <link rel="stylesheet" href="./style.css">
-</head>
+  <body>
+    <header>
+      <nav class="content-nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="neighborhood.html">Neighborhood Walks</a></li>
+          <li><a href="parks.html">Walks in the Park</a></li>
+        </ul>
+      </nav>
+      <img
+        src="img/tải xuống.jpg"
+        width="200"
+        alt="Brown Labradoodle sitting next to a statue."
+      />
+      <h1 class="plain xancy">Neighborhood Walks</h1>
+    </header>
+    <main class="content-main">
+      <p>
+        Springtime in
+        <a href="https://www.michigan.org/city/ann-arbor">Ann Arbor</a> is a
+        beautiful time. Even though it can be chilly at times, it is nice to
+        walk my dog Bacon. This site includes some pictures I have taken on
+        these walks.
+      </p>
 
-<body>
-  <header>
-    <nav class="content-nav">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="neighborhood.html">Neighborhood Walks</a></li>
-        <li><a href="parks.html">Walks in the Park</a></li>
-      </ul>
-    </nav>
-    <img src="img/tải xuống.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
-    <h1 class="plain xancy" >Neighborhood Walks</h1>
-  </header>
-  <main class="content-main">
-    <p>Springtime in <a href="https://www.michigan.org/city/ann-arbor">Ann Arbor</a> is a beautiful time. Even though
-      it can be chilly at times, it is nice to walk my dog Bacon. This site includes some pictures I have taken on
-      these walks. </p>
+      <p>
+        Sometimes we walk around the neighborhood, other times we make it to the
+        woods. Ann Arbor also has some beautiful lakes and rivers including the
+        <a
+          href="https://www.annarbor.org/things-to-do/recreation-outdoors/huron-river/"
+          >Huron River Watertrail</a
+        >
+        and the
+        <a
+          href="https://www.a2gov.org/departments/Parks-Recreation/parks-places/argo/pages/default.aspx"
+          >Argo Park Cascades</a
+        >.
+      </p>
+      <div class="content-list-img flex">
+        <img
+          src="img/park/park1.jpg"
+          alt="Image 1"
+          class="content-img"
+          onmouseover="inImg(this)"
+          onmouseout="outImg(this)"
+        />
+        <img
+          src="img/park/park3.jpg"
+          alt="Image 2"
+          class="content-img"
+          onmouseover="inImg(this)"
+          onmouseout="outImg(this)"
+        />
+        <img
+          src="img/park/park4.jpg"
+          alt="Image 3"
+          class="content-img"
+          onmouseover="inImg(this)"
+          onmouseout="outImg(this)"
+        />
+        <img
+          src="img/park/park5.jpg"
+          alt="Image 4"
+          class="content-img"
+          onmouseover="inImg(this)" onmouseout="outImg(this)"
+        />
+        <img
+          src="img/park/park6.jpg"
+          alt="Image 5"
+          class="content-img"
+          onmouseover="inImg(this)"
+          onmouseout="outImg(this)"
+        />
+        <img
+          src="img/park/park7.jpg"
+          alt="Image 6"
+          class="content-img"
+          onmouseover="inImg(this)"
+          onmouseout="outImg(this)"
+        />
+      </div>
+    </main>
+    <footer class="content-footer">
+      <p>
+        This page was originally created by Colleen van Lent for the
+        <a href="https://www.coursera.org/specializations/web-design">
+          Web Design for Everybody</a
+        >
+        Specialization. Specialization. Students are invited to make changes.
+      </p>
+    </footer>
 
-    <p>Sometimes we walk around the neighborhood, other times we make it to the woods. Ann Arbor also has some
-      beautiful lakes and rivers including the <a
-        href="https://www.annarbor.org/things-to-do/recreation-outdoors/huron-river/">Huron River Watertrail</a> and
-      the <a href="https://www.a2gov.org/departments/Parks-Recreation/parks-places/argo/pages/default.aspx">Argo Park
-        Cascades</a>.</p>
-        <div class="content-list-img flex">
-          <img src="img/park/park1.jpg" alt="" class="content-img">
-          <img src="img/park/park3.jpg" alt="" class="content-img">
-          <img src="img/park/park4.jpg" alt="" class="content-img">
-          <img src="img/park/park5.jpg" alt="" class="content-img">
-          <img src="img/park/park6.jpg" alt="" class="content-img">
-          <img src="img/park/park7.jpg" alt="" class="content-img">
-        </div>
-  </main>
-  <footer class="content-footer">
-    <p>This page was originally created by Colleen van Lent for the <a
-        href="https://www.coursera.org/specializations/web-design"> Web Design for Everybody</a> Specialization.
-      Specialization. Students are invited to make changes.</p>
-  </footer>
+    <script>
+      const images = document.querySelectorAll(".content-list-img img");
 
-</body>
+      // Gán sự kiện mouseenter và mouseleave cho từng ảnh
+      images.forEach((img) => {
+        img.addEventListener("mouseenter", () => centerImage(img));
+        img.addEventListener("mouseleave", () => resetImage(img));
+      });
 
+      function inImg(img) {
+        img.classList.add("centered");
+      }
+
+      function outImg(img) {
+        img.classList.remove("centered");
+      }
+    </script>
+  </body>
 </html>
