--- a/Mooc3/responsiveHomework/index.html
+++ b/Mooc3/responsiveHomework/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Colors</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
@@ -23,48 +24,50 @@
       <li>The second media query should trigger at 998px and change the layout of the divs to be 30% of the viewport width.</li>
     </ul>
     <p>You will need to make additional changes to ensure that the divs appear next to each other and that the images are contained within the divs.  Some of these properties include display, width and max-height.</p>
-
-    <div>
-      <img src="images/Red.jpeg" alt="Red" width="200">
-      <p class = "label">Red</p>
-    </div>
-    <div>
-      <img src="images/Orange.png" alt="Orange" width="200">
-      <p class = "label">Orange</p>
-    </div>
-    <div>
-      <img src="images/Yellow.png" alt="Yellow" width="200">
-      <p class = "label">Yellow</p>
-    </div>
-    <div>
-      <img src="images/Green.png" alt="Green" width="200">
-      <p class = "label">Green</p>
-    </div>
-    <div>
-      <img src="images/Blue.png" alt="Blue" width="200">
-      <p class = "label">Blue</p>
-    </div>
-    <div>
-      <img src="images/Indigo.jpeg" alt="Indigo" width="200">
-      <p class = "label">Indigo</p>
-    </div>
-    <div>
-      <img src="images/Purple.png" alt="Purple" width="200">
-      <p class = "label">Purple</p>
-    </div>
-    <div>
-      <img src="images/Pink.jpeg" alt="Pink" width="200">
-      <p class = "label">Pink</p>
-    </div>
-    <div>
-      <img src="images/White.png" alt="White" width="200">
-      <p class = "label">White</p>
+    <div class="list-img">
+      
+      <div>
+        <img src="images/Red.jpeg" alt="Red" width="200">
+        <p class = "label">Red</p>
+      </div>
+      <div>
+        <img src="images/Orange.png" alt="Orange" width="200">
+        <p class = "label">Orange</p>
+      </div>
+      <div>
+        <img src="images/Yellow.png" alt="Yellow" width="200">
+        <p class = "label">Yellow</p>
+      </div>
+      <div>
+        <img src="images/Green.png" alt="Green" width="200">
+        <p class = "label">Green</p>
+      </div>
+      <div>
+        <img src="images/Blue.png" alt="Blue" width="200">
+        <p class = "label">Blue</p>
+      </div>
+      <div>
+        <img src="images/Indigo.jpeg" alt="Indigo" width="200">
+        <p class = "label">Indigo</p>
+      </div>
+      <div>
+        <img src="images/Purple.png" alt="Purple" width="200">
+        <p class = "label">Purple</p>
+      </div>
+      <div>
+        <img src="images/Pink.jpeg" alt="Pink" width="200">
+        <p class = "label">Pink</p>
+      </div>
+      <div>
+        <img src="images/White.png" alt="White" width="200">
+        <p class = "label">White</p>
+      </div>
     </div>
     </div>
   </main>
 
   <footer>
-    <a href="#top">Jump to the Top</a>
+    <a href="#top" class="scroll-top">Jump to the Top</a>
   </footer>
 </body>
 
